dashboard/k8s/02-ingress-vpn.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web3eye-dashboard-ingress-vpn
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: web3eye-dashboard
    k8s.kuboard.cn/workload: web3eye-dashboard
    kubernetes.io/ingress.class: 'traefik-internet-vpn'
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-http-redirect-https-testing@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - '*.dashboard.web3eye.webui.io'
        - dashboard.web3eye.webui.io
      secretName: web3eye-webui-io-tls
  rules:
    - host: dashboard.web3eye.webui.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web3eye-dashboard
                port:
                  number: 80
    - host: www.dashboard.web3eye.webui.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web3eye-dashboard
                port:
                  number: 80
