dashboard/k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
  annotations:
    # k8s.kuboard.cn/displayName: dashboard
    # k8s.kuboard.cn/workload: dashboard
    kubernetes.io/ingress.class: 'traefik-internet'
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-http-redirect-https-testing@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - '*.testnet.web3eye.io'
        - testnet.web3eye.io
      secretName: testnet-web3eye-io-tls
  rules:
    - host: testnet.web3eye.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 80
    # - host: www.testnet.web3eye.io
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: dashboard
    #             port:
    #               number: 80
